--- a/package.json
+++ b/package.json
@@ -16,57 +16,62 @@
 		"build:ios": "expo export --platform ios"
 	},
 	"dependencies": {
+		"@coral-xyz/anchor": "^0.31.1",
+		"@coral-xyz/borsh": "^0.31.1",
 		"@dynamic-labs/client": "^4",
 		"@dynamic-labs/iframe-setup": "^4.27.0",
 		"@dynamic-labs/react-hooks": "^4",
 		"@dynamic-labs/react-native-extension": "^4",
-		"@dynamic-labs/solana-extension": "^4",
+		"@dynamic-labs/solana-extension": "^4.32.0",
 		"@dynamic-labs/viem-extension": "^4",
 		"@dynamic-labs/web-extension": "^4.27.0",
 		"@dynamic-labs/zerodev-extension": "^4.14.0",
-		"@expo/metro-runtime": "~5.0.4",
+		"@expo/metro-runtime": "~6.1.2",
 		"@gorhom/bottom-sheet": "^5.2.0",
 		"@lottiefiles/dotlottie-react": "^0.15.1",
 		"@react-native-async-storage/async-storage": "^2.2.0",
 		"@react-native-community/datetimepicker": "^8.4.4",
 		"@react-native-picker/picker": "^2.11.1",
+		"@solana/spl-token": "^0.4.14",
+		"@solana/web3.js": "^1.98.4",
 		"@supabase/supabase-js": "^2.55.0",
 		"base64-arraybuffer": "^1.0.2",
 		"buffer": "^6",
 		"crypto-browserify": "^3.12.1",
 		"eslint": "8",
 		"events": "^3.3.0",
-		"expo": "^53.0.20",
+		"expo": "^54.0.9",
 		"expo-barcode-scanner": "^13.0.1",
-		"expo-camera": "^16.1.11",
-		"expo-constants": "~17.1.7",
-		"expo-haptics": "^14.1.4",
-		"expo-image": "^2.4.0",
-		"expo-image-manipulator": "^13.1.7",
-		"expo-image-picker": "^16.1.4",
-		"expo-linear-gradient": "^14.1.5",
-		"expo-linking": "~7.1.7",
-		"expo-router": "~5.1.4",
-		"expo-secure-store": "^14.2.3",
-		"expo-status-bar": "~2.2.3",
-		"expo-web-browser": "~14.2.0",
+		"expo-camera": "~17.0.8",
+		"expo-constants": "~18.0.9",
+		"expo-haptics": "~15.0.7",
+		"expo-image": "~3.0.8",
+		"expo-image-manipulator": "~14.0.7",
+		"expo-image-picker": "~17.0.8",
+		"expo-linear-gradient": "~15.0.7",
+		"expo-linking": "~8.0.8",
+		"expo-router": "~6.0.7",
+		"expo-secure-store": "~15.0.7",
+		"expo-status-bar": "~3.0.8",
+		"expo-web-browser": "~15.0.7",
 		"fast-text-encoding": "^1.0.6",
-		"lottie-react-native": "7.2.2",
+		"lottie-react-native": "~7.3.1",
 		"nativewind": "^4.1.23",
 		"process": "^0.11.10",
-		"react": "19.0.0",
-		"react-dom": "19.0.0",
-		"react-native": "0.79.5",
+		"react": "19.1.0",
+		"react-dom": "19.1.0",
+		"react-native": "0.81.4",
 		"react-native-gesture-handler": "^2.28.0",
 		"react-native-get-random-values": "~1.11.0",
 		"react-native-gifted-charts": "^1.4.63",
 		"react-native-qrcode-svg": "^6.3.15",
-		"react-native-reanimated": "~3.17.4",
-		"react-native-safe-area-context": "5.4.0",
-		"react-native-screens": "~4.11.1",
+		"react-native-reanimated": "~4.1.0",
+		"react-native-safe-area-context": "~5.6.0",
+		"react-native-screens": "~4.16.0",
 		"react-native-svg": "^15.12.1",
-		"react-native-web": "^0.20.0",
-		"react-native-webview": "13.13.5",
+		"react-native-web": "^0.21.0",
+		"react-native-webview": "13.15.0",
+		"react-native-worklets": "^0.5.1",
 		"stream-browserify": "^3.0.0",
 		"text-encoding": "^0.7.0",
 		"tweetnacl-util": "^0.15.1",
@@ -78,16 +83,17 @@
 		"@testing-library/react-native": "^12.8.0",
 		"@types/jest": "^29.5.14",
 		"@types/lodash": "^4.17.20",
-		"@types/react": "^18",
-		"eslint-config-expo": "~8.0.1",
+		"@types/react": "~19.1.10",
+		"eslint-config-expo": "~10.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-prettier": "^5.2.1",
 		"jest": "^29.7.0",
-		"jest-expo": "~52.0.6",
+		"jest-expo": "~54.0.12",
 		"prettier": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.5.11",
 		"react-test-renderer": "18.2.0",
 		"tailwindcss": "^3.4.17",
+		"tsx": "^4.20.5",
 		"typescript": "^5.1.3"
 	},
 	"private": true
